<resources>
    <string name="app_name">WorkManager Tutorial</string>
    <string name="birthdate">Birthdate</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="title">Title</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="desc">"Android WorkManager Tutorial demonstration of periodic work request"</string>
</resources>