<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:elevation="15dp"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center_horizontal"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="15dp"
            android:background="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#222323"
                tools:hint="@string/title" />

            <TextView
                android:id="@+id/txt_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:hint="@string/first_name"
                android:textSize="18sp"
                android:layout_alignRight="@id/txt_title"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/txt_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:hint="@string/last_name"
                android:textSize="18sp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_alignRight="@id/txt_fname"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/birthdate"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/birthdate"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/street"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/city"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/state"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:hint="@string/country"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:hint="loading"
            android:visibility="gone"
            android:textSize="25sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#7E7777"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>